[BUILD] made OpenMS compile again

--- a/openms/source/TEST/CMakeLists.txt
+++ b/openms/source/TEST/CMakeLists.txt
@@ -14,8 +14,8 @@ ADD_DEFINITIONS(-DQT_GUI_LIB)
 ## Delete when bug is fixed.
 ##
 add_custom_target(svn_revision_update_forTests ALL
-	    COMMAND ${CMAKE_COMMAND} -DSOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR} -DSVN_REVISION_FILE=${SVN_REVISION_FILE} -DOPENMS_HAS_SVNVERSION=${OPENMS_HAS_SVNVERSION} -DSVNVERSION_EXECUTABLE=${SVNVERSION_EXECUTABLE}
-	                             -P ${CMAKE_CURRENT_SOURCE_DIR}/../../cmake/svnversion.cmake)
+	    COMMAND ${CMAKE_COMMAND} -DSOURCE_DIR=${OPENMS_HOST_DIRECTORY} -DSVN_REVISION_FILE=${SVN_REVISION_FILE} -DOPENMS_HAS_SVNVERSION=${OPENMS_HAS_SVNVERSION} -DSVNVERSION_EXECUTABLE=${SVNVERSION_EXECUTABLE}
+	                             -P ${OPENMS_HOST_DIRECTORY}/cmake/svnversion.cmake)
 add_dependencies(OpenMS svn_revision_update_forTests)
 ## - END OF WORKAROUND
 
