[BUILD] proper exposing of include directories and libs for sibling projects

--- a/doc/code_examples/CMakeLists.txt
+++ b/doc/code_examples/CMakeLists.txt
@@ -45,6 +45,9 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 # get the actual code examples
 include(${CMAKE_CURRENT_LIST_DIR}/executables.cmake)
 
+# add OpenMS includes 
+include_directories(${OPENMS_INCLUDE_DIRECTORIES})
+
 # add the targets
 foreach(i ${EXAMPLES_executables})
   add_executable(${i} ${CMAKE_CURRENT_LIST_DIR}/${i}.C)
