[BUILD] moved doc related stuff to separate CMakeLists.txt in doc folder (non-functional)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,23 +150,4 @@ add_subdirectory(openms)
 #------------------------------------------------------------------------------
 # Documentation
 #------------------------------------------------------------------------------
-set(OpenMS_doc_executables)
-include(doc/doxygen/parameters/executables.cmake)
-foreach(i ${OpenMS_doc_executables})
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "doc/doxygen/parameters")
-	add_executable(${i} EXCLUDE_FROM_ALL doc/doxygen/parameters/${i}.C)
-	target_link_libraries(${i} ${OPENMS_GUI_LIBRARIES})
-	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "bin")
-endforeach(i)
-add_custom_target(doc_progs)
-add_dependencies(doc_progs ${OpenMS_doc_executables} TOPP UTILS GUI)
-
-include(cmake/OpenMSBuildSystem_doc.cmake)
-
-#------------------------------------------------------------------------------
-# Examples / Tutorials
-#------------------------------------------------------------------------------
-option(BUILD_EXAMPLES "Compile OpenMS code examples" ON)
-if(BUILD_EXAMPLES AND "${PACKAGE_TYPE}" STREQUAL "none")
-  add_subdirectory(doc/code_examples)
-endif(BUILD_EXAMPLES AND "${PACKAGE_TYPE}" STREQUAL "none")
+add_subdirectory(doc)
