[BUILD] moved style tests to tests/style

--- a/tests/coding/CMakeLists.txt
+++ b/tests/coding/CMakeLists.txt
@@ -40,7 +40,7 @@ project("OpenMS_coding_tests")
 if(NOT CMAKE_COMPILER_IS_CLANG) ## cppcheck does not support clang output
   find_package(cppcheck)
   if( CPPCHECK_FOUND )
-    include( ${OPENMS_HOST_DIRECTORY}/cmake/modules/cppcheck.cmake )
+    include( ${PROJECT_SOURCE_DIR}/cppcheck.cmake )
   endif(CPPCHECK_FOUND)
 elseif()
   message(STATUS "CPPCheck and CLang are incompatible. Please select a GCC based compiler.")
@@ -54,5 +54,5 @@ find_program(PYTHON_EXECUTABLE
 if("${PYTHON_EXECUTABLE}" STREQUAL "PYTHON_EXECUTABLE-NOTFOUND")
   message(STATUS "Info: The program python could not be found. Coding convention check will not be available! Add the location of python(.exe) to your PATH environment variable.")
 else()
-  include( ${OPENMS_HOST_DIRECTORY}/cmake/createcpplinttests.cmake )
+  include( ${PROJECT_SOURCE_DIR}//createcpplinttests.cmake )
 endif("${PYTHON_EXECUTABLE}" STREQUAL "PYTHON_EXECUTABLE-NOTFOUND")
