[FIX,BUILD] added explicit find boost to OpenSwathAlgo

--- a/openswathalgo/CMakeLists.txt
+++ b/openswathalgo/CMakeLists.txt
@@ -29,17 +29,37 @@
 #
 # --------------------------------------------------------------------------
 # $Maintainer: Stephan Aiche, Chris Bielow, Hannes Röst $
-# $Authors: Hannes Röst $
+# $Authors: Hannes Röst, Stephan Aiche $
 # --------------------------------------------------------------------------
 
 project("OpenSWATHAlgo")
 cmake_minimum_required(VERSION 2.8.3 FATAL_ERROR)
 
 #------------------------------------------------------------------------------
+# Find Boost lib
+#------------------------------------------------------------------------------
+set(Boost_USE_STATIC_LIBS ${BOOST_USE_STATIC})
+set(Boost_USE_MULTITHREADED  ON)
+set(Boost_USE_STATIC_RUNTIME OFF)
+add_definitions(/DBOOST_ALL_NO_LIB) ## disable auto-linking of boost libs (boost tends to guess wrong lib names)
+set(Boost_COMPILER "")
+
+# help boost finding it's packages
+set(Boost_ADDITIONAL_VERSIONS "1.47.0" "1.48.0" "1.49.0" "1.50.0" "1.51.0" "1.52.0" "1.53.0" "1.54.0")
+
+# 1st attempt does not explicitly requires boost to enable second check (see below)
+find_package(Boost 1.42.0)
+
+if(NOT Boost_FOUND)
+  message(FATAL_ERROR "Boost was not found!")
+endif()
+
+#------------------------------------------------------------------------------
 # Export OpenSWATHAlgo include directories
 #------------------------------------------------------------------------------
 set(OPENSWATHALGO_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/include
                                       ${PROJECT_BINARY_DIR}/include
+                                      ${Boost_INCLUDE_DIRS}
     CACHE INTERNAL "OpenSWATHAlgo include directories" FORCE)
 
 #------------------------------------------------------------------------------
